@@ -1,0 +1,5 @@
+/* Sorvani */
+
+-- Max Buff Slots for Pets --
+INSERT INTO `rule_values` (`ruleset_id`,`rule_name`,`rule_value`,`notes`)
+    VALUES (1,'Spells:MaxTotalSlotsPET','25','do not set this higher than 25 until the player profile is removed from the blob');
